...
  const handleRecoveryPhrasePress = () => {
    router.push('/SeedBackup');
  };

  const handleBiometricsPress = async () => {
    if (!biometricInfo.isAvailable) {
      Alert.alert('Not Available', 'Biometric authentication is not available on this device.');
      return;
    }

    const currentValue = settings.biometricAuth;
    if (currentValue === 'ON') {
      Alert.alert('Disable Biometrics', 'Are you sure you want to disable biometric authentication?', [
...
      title: 'Security',
      key: 'security',
      hasBackground: true,
      data: [
        {
          id: 'biometrics',
          title: 'Biometrics',
          onPress: handleBiometricsPress,
          hideChevron: true,
          renderAccessory: () =>
            isBiometricsEnabled ? (
              <View style={styles.statusCheckContainer}>
                <Ionicons name="checkmark" size={20} color="white" />
...
