...
        Dapp <b>{args.from}</b> wants your permission to access your account
      </span>

      <AddressBubble address={address} showCopyButton={false} />

      <div>
        <Button onClick={() => onAllowClick()}>Allow</Button>
        <span> </span>
        <Button onClick={() => onDenyClick()}>Deny</Button>
      </div>
    </>
  );
}
...
